--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="http://127.0.0.1:35729/livereload.js?snipver=1"></script>
 </head>
 <body>
-  <h1>Test harness</h1>
-  <ul>{{ listitems }}</ul>
+  <h1>Hello world</h1>
+  <p>Delete this file if you building library.</p>
 </body>
 </html>
